fixing some broken style on mobile view

--- a/src/styles/partials/_business-card.scss
+++ b/src/styles/partials/_business-card.scss
@@ -52,14 +52,27 @@
 					font-size: 10px;
 					display: inline-block;
 					width: 80px;
+					text-transform: uppercase;
+					color: $dark_blue;
 				}
 
 				.hcard-preview-value {
 					font-family: 'Merriweather', serif;
 					font-size: 16px;
 					display: inline-block;
+					min-width: 85px;
 				}
 			}
 		}
+	}
+}
+
+@media (max-width: $screen-sm-min) {
+	.hcard-preview-container {
+		padding: 30px 15px;
+	}
+
+	.hcard-preview-detail .hcard-preview-value {
+		min-width: 25px !important;
 	}
 }
