--- a/src/styles/partials/_buttons.scss
+++ b/src/styles/partials/_buttons.scss
@@ -4,6 +4,7 @@
 	color: $white;
 	padding: 8px 30px;
 	border: none;
+	width: 200px;
 
 	&:hover, &:active, &:focus, &:active:focus {
 		color: $white;
