--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -11,6 +11,7 @@
 		font-family: 'Merriweather Sans', sans-serif;
 		font-size: 12px;
 		text-transform: uppercase;
+		color: $dark_blue;
 	}
 
 	input[type="text"] {
